# worker-tetra

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile-cpu  Dockerfile-lb  Dockerfile-lb-cpu  Dockerfile-load-balancer-sls  Dockerfile-runtime-two  Makefile  PLAN.md  PRODUCTION_MODE_CHANGES.md  README.md  constants.py  handler.py  pyproject.toml  release-please-config.json  test-handler.sh  test_input.json  verify_production_mode.sh  workspace_manager.py
.claude/: settings.json
.claude/skills/worker-flash-explorer/: SKILL.md
.claude/skills/worker-tetra-explorer/: SKILL.md
.github/workflows/: ci.yml  cleanup.yml  deploy.yml  docker-dev.yml  docker-prod.yml  release-please.yml
docs/: Centralized_Log_Streaming_System.md  Docker_Build_Pipeline.md  Dynamic_Handler_Loading.md  Endpoint Persistence.md  Load_Balancer_Docker_Infrastructure.md  Manifest_Reconciliation.md  Runtime_Execution_Paths.md  System_Python_Runtime_Architecture.md  Volume_Unpacking_System.md
scripts/: ast_to_sqlite.py  code_intel.py  mcp_code_intel_server.py
src/: __init__.py  baked_executor.py  base_executor.py  cache_sync_manager.py  class_executor.py  class_registry.py  constants.py  dependency_installer.py  download_accelerator.py  endpoint.py  function_executor.py  handler.py  handler_protocol.py  hf_download_strategy.py  hf_downloader_native.py  hf_downloader_tetra.py  hf_strategy_factory.py  huggingface_accelerator.py  huggingface_cache.py  lb_handler.py  load_balancer_sls_handler.py  log_capture.py  logger.py  manifest_reconciliation.py  production_executor.py  remote_executor.py  runtime_two_handler.py  subprocess_utils.py  tarball_loader.py  test-handler.sh  test-lb-handler.sh  test_class_custom_method.json  test_class_persistence.json  test_debug_input.json  test_dependencies.json  test_error_scenarios.json  test_function_args.json  test_hf_accelerated_input.json  test_hf_input.json  test_hf_no_volume.json  (+6 more)
src/live_serverless/: __init__.py  cache_sync_manager.py  class_executor.py  constants.py  dependency_installer.py  function_executor.py  log_streamer.py  logger.py  remote_executor.py  serialization_utils.py  subprocess_utils.py
src/tests/: test_class_custom_method.json  test_class_input.json  test_class_persistence.json  test_function_args.json  test_hf_accelerated_input.json  test_installed_packages.json  test_lb_simple_function.json  test_pip_package_access.json  test_runpod_import.json  test_system_dependencies.json  test_uv_no_acceleration.json
tests/: conftest.py
tests/integration/: conftest.py  test_dependency_management.py  test_download_acceleration_integration.py  test_flash_integration.py  test_handler_integration.py  test_hf_strategy_integration.py  test_log_capture_integration.py  test_manifest_state_manager.py  test_python_path_integration.py  test_runpod_volume_integration.py  test_unpack_volume_integration.py
tests/unit/: conftest.py  test_cache_sync_manager.py  test_class_executor.py  test_dependency_installer.py  test_function_executor.py  test_handler.py  test_handler_loader.py  test_handler_protocol.py  test_hf_download_strategies.py  test_huggingface_cache.py  test_log_capture.py  test_manifest_reconciliation.py  test_remote_execution.py  test_remote_executor.py  test_runpod_volume_workspace.py  test_serialization_utils.py  test_unpack_volume.py  test_volume_execution.py  test_workspace_manager.py
worker-flash-server/: Dockerfile  README.md  requirements.txt
worker-flash-server/src/: server.py  tarball_loader.py
