[project]
name = "worker-tetra"
version = "0.3.1"
description = "Dynamic GPU provisioning for ML workloads with transparent execution"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "cloudpickle>=3.1.1",
    "pydantic>=2.11.4",
    "runpod",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov=handler",
    "--cov-report=term-missing",
    "--cov-fail-under=35"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
    "ignore::pytest.PytestUnknownMarkWarning"
]

[tool.ruff]
# Exclude tetra-rp directory since it's a separate repository
exclude = [
    "tetra-rp/",
]

[tool.mypy]
# Basic configuration
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, can be stricter later
disallow_incomplete_defs = false
check_untyped_defs = true

# Import discovery
mypy_path = "src"
namespace_packages = true

# Error output
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude directories
exclude = [
    "tetra-rp/",
    "tests/",  # Start by excluding tests, can add later
]

# Per-module options
[[tool.mypy.overrides]]
module = [
    "runpod.*",
    "cloudpickle.*",
]
ignore_missing_imports = true
