[project]
name = "worker-flash"
version = "0.7.5"
description = "Dynamic GPU provisioning for ML workloads with transparent execution"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "aiohttp>=3.9.0",
    "cloudpickle>=3.1.1",
    "pydantic>=2.11.4",
    "requests>=2.25.0",
    "runpod",
    "hf_transfer>=0.1.0",
    "huggingface_hub>=0.32.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "runpod-flash",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "types-requests>=2.25.0",
    "mcp>=1.0.0",
    "typer>=0.12.0",
    "rich>=14.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov=handler",
    "--cov-report=term-missing",
    "--cov-fail-under=35"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
    "ignore::pytest.PytestUnknownMarkWarning"
]

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "cloudpickle",
    "runpod",
    "transformers",
    "hf_transfer",
    "huggingface_hub",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "runpod_flash",
    "runpod_flash.*",
]
follow_imports = "skip"

[tool.ruff]
line-length = 100
